# streamling-community-plugins

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md  justfile
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: lib.rs
src/postgres_cdc/: arrow.rs  bridge.rs  config.rs  discovery.rs  json.rs  ledger.rs  mod.rs  shared.rs  source.rs
src/sinks/: mod.rs
src/sinks/mysql/: mod.rs  sink.rs
src/sinks/s2/: sink.rs
src/sinks/s3/: mod.rs  partitioning.rs  sink.rs
src/sinks/sqs/: sink.rs
src/utils/: mod.rs  plugin_options.rs  record_batch_json.rs
tests/: mysql_sink.rs  postgres_cdc_shared_slot.rs  postgres_cdc_source.rs  s2_sink.rs  sqs_sink.rs
