[package]
name = "community_plugins"
version = "0.1.0"
edition = "2024"

[dependencies]
streamling-plugin = { path = "../streamling/crates/streamling-plugin" }

# Generic RecordBatch-to-JSON conversion (see utils::record_batch_json).
# U256 columns are serialized as decimal strings; arrow_json emits hex by default.
# Minimal dependency - avoids pulling in streamling-core.
uint = "0.10"

# FFI dependencies (required by init_plugin_with_async_runtime! macro)
abi_stable = "0.11.3"

# Core dependencies
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
async-trait = "0.1.83"
futures = "0.3"

# Arrow dependencies
arrow = "55.2.0"
arrow-schema = "55.2.0"
arrow-json = "55.2.0"
parquet = "55.2.0"
bytes = "1.8.0"

# Object store (for S3)
object_store = { version = "0.12.3", features = ["aws"] }
uuid = { version = "1.0", features = ["v4", "v7"] }

# URL encoding (for S3 partitioning)
urlencoding = "2.1.3"

# MySQL
sqlx = { version = "0.8.5", features = ["runtime-tokio", "mysql", "tls-rustls"] }

# AWS SDK (for SQS).
# `default-features = false` drops the legacy `rustls` feature (which would
# pull rustls 0.21 + rustls-webpki 0.101 via `aws-smithy-runtime/tls-rustls`).
# `default-https-client` keeps modern TLS via `aws-smithy-http-client/rustls-aws-lc`.
aws-sdk-sqs = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-config = { version = "1", default-features = false, features = [
    "behavior-version-latest",
    "rt-tokio",
    "credentials-process",
    "default-https-client",
] }
aws-credential-types = "1"
aws-types = "1"

[dev-dependencies]
regex = "1.11.1"
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.8.5", features = ["runtime-tokio", "mysql", "tls-rustls"] }
streamling-common = { path = "../streamling/crates/streamling-common" }
streamling-e2e = { path = "../streamling/crates/streamling-e2e" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[lib]
name = "community_plugins"
crate-type = ["cdylib", "rlib"]
