[package]
name = "community_plugins"
version = "0.1.1"
edition = "2024"

[dependencies]
streamling-plugin = "0.2.0"

# Generic RecordBatch-to-JSON conversion (see utils::record_batch_json).
# U256 columns are serialized as decimal strings; arrow_json emits hex by default.
# Minimal dependency - avoids pulling in streamling-core.
uint = "0.10"

# FFI dependencies (required by init_plugin_with_async_runtime! macro)
abi_stable = "0.11.3"

# Core dependencies
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tracing = "0.1"
async-trait = "0.1.83"
futures = "0.3"

# Arrow dependencies
arrow = "55.2.0"
arrow-schema = "55.2.0"
arrow-json = "55.2.0"
parquet = "55.2.0"
bytes = "1.8.0"

# Object store (for S3)
object_store = { version = "0.12.3", features = ["aws"] }
uuid = { version = "1.0", features = ["v4", "v7"] }

# URL encoding (for S3 partitioning)
urlencoding = "2.1.3"

# MySQL sink + Postgres CDC schema discovery
sqlx = { version = "0.8.5", features = ["runtime-tokio", "mysql", "postgres", "tls-rustls"] }

# Postgres CDC (embedded supabase/etl). Pinned to a rev: pre-1.0, not on
# crates.io; pulls a forked tokio-postgres and sqlx 0.9-alpha (coexists with
# our sqlx 0.8 as a separate major).
# NOTE: the sqlx 0.9 line is pinned to 0.9.0-alpha.1 in Cargo.lock
# (`cargo update -p sqlx@0.9.0 --precise 0.9.0-alpha.1`); sqlx 0.9.0 stable
# changed Migrator::run_direct and breaks etl at this rev. Re-check when
# bumping the etl rev.
etl = { git = "https://github.com/supabase/etl", rev = "f7f6aea7fd856b4e0565fa06f5c3da4427ea7acb" }
# Must match etl's secrecy major for PgConnectionConfig::password.
secrecy = "0.10"

# Postgres CDC: row-image JSON, timestamps, encoding.
serde_json = "1.0"
chrono = "0.4"
base64 = "0.22"
sha2 = "0.10"

# AWS SDK (for SQS).
# `default-features = false` drops the legacy `rustls` feature (which would
# pull rustls 0.21 + rustls-webpki 0.101 via `aws-smithy-runtime/tls-rustls`).
# `default-https-client` keeps modern TLS via `aws-smithy-http-client/rustls-aws-lc`.
aws-sdk-sqs = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
aws-config = { version = "1", default-features = false, features = [
    "behavior-version-latest",
    "rt-tokio",
    "credentials-process",
    "default-https-client",
] }
aws-credential-types = "1"
aws-types = "1"

# S2 (s2.dev) sink
s2-sdk = "0.31.6"
# rustls is a direct dep so the S2 sink can install the aws-lc-rs CryptoProvider
# at startup. s2-sdk pulls rustls in via its default feature; we want to be
# explicit because more than one TLS-using crate is linked (aws-smithy-http-client
# also uses aws-lc-rs) and rustls 0.23 requires an explicit provider when more
# than one is present.
rustls = { version = "0.23", features = ["aws-lc-rs"] }

[dev-dependencies]
regex = "1.11.1"
s2-testcontainers = "0.36.8"
serde = "1.0"
streamling-e2e = "0.1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
url = "2.5"

[lib]
name = "community_plugins"
crate-type = ["cdylib", "rlib"]
